--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
       <div class="services-box">
         <i class="fa-solid fa-palette"></i>
-        <h3>UI & UX </h3>
+        <h3>UI/UX Design </h3>
         <p>I specialize in creating visually compelling and user-centric digital experiences. My approach integrates
           aesthetics with functionality, ensuring that each interface is not only attractive but also intuitive and
           seamless for the end-user.Ensuring that each interface is not only attractive but
